Move hawkeyerc to web directory for hawkeye to pick it up; remove piprot module since we aren't interested in outdated modules unless they have vulnerabilities

--- a/web/.hawkeyerc
+++ b/web/.hawkeyerc
@@ -5,7 +5,6 @@
         "files-contents",
         "files-secrets",
         "python-bandit",
-        "python-safety",
-        "python-piprot"
+        "python-safety"
     ]
 }
